--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,37 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(_DEBUG)
 endif()
 
-project(template)
-add_executable(${PROJECT_NAME} main.cpp)
+project(quix)
+
+add_library(${PROJECT_NAME} 
+    quix/quix_device.cpp
+    quix/quix_logger.cpp
+)
 
 include(cmake/CPM.cmake)
 
-CPMAddPackage("gh:fmtlib/fmt#10.0.0")
+CPMAddPackage("gh:gabime/spdlog@1.11.0")
 
-find_package(fmt REQUIRED)
+find_package(spdlog REQUIRED)
 target_link_libraries(${PROJECT_NAME} 
-    fmt::fmt
+    spdlog::spdlog
 )
 target_include_directories(${PROJECT_NAME} 
-    PRIVATE ${fmt_SOURCE_DIRS}/include
+    PUBLIC ${PROJECT_SOURCE_DIR}/quix
+    PUBLIC ${spdlog_SOURCE_DIRS}/include
 )
 
+
+
+
+add_executable(quix_example 
+    examples/main.cpp
+)
+
+target_link_libraries(quix_example 
+    ${PROJECT_NAME}
+)
+target_include_directories(quix_example 
+    PUBLIC ${PROJECT_SOURCE_DIR}/quix
+    PUBLIC ${spdlog_SOURCE_DIRS}/include
+)
