got shader modules to compile, makes the project require python3 to run a build command for glslang, but it should work, and all of the linking should be fine. Also got the spirv tools optimizer to work, so we should get some fast spv shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.22.0)
+cmake_minimum_required(VERSION 3.26.0)
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(_DEBUG)
@@ -11,6 +11,7 @@ add_library(${PROJECT_NAME}
     quix/quix_device_impl.cpp
     quix/quix_logger.cpp
     quix/quix_swapchain.cpp
+    quix/quix_shader.cpp
 )
 
 target_precompile_headers(${PROJECT_NAME} 
@@ -20,11 +21,38 @@ target_precompile_headers(${PROJECT_NAME}
 include(cmake/CPM.cmake)
 
 CPMAddPackage("gh:gabime/spdlog@1.11.0")
-CPMAddPackage("gh:glfw/glfw#3.3.7")
+CPMAddPackage("gh:glfw/glfw#3.3.8")
+
+CPMAddPackage(
+    NAME glslang
+    GITHUB_REPOSITORY KhronosGroup/glslang
+    GIT_TAG 12.2.0
+    VERSION 12.2.0
+    DOWNLOAD_ONLY True
+)
+
+# build glslang
+
+# execute python program to get glslang externals
+
+find_package(Python3 COMPONENTS Interpreter REQUIRED)
+
+execute_process(
+    COMMAND ${Python3_EXECUTABLE} ${glslang_SOURCE_DIR}/update_glslang_sources.py
+    WORKING_DIRECTORY ${glslang_SOURCE_DIR}
+)
+
+add_subdirectory(${glslang_SOURCE_DIR} ${glslang_BINARY_DIR})
+
+
 
 find_package(spdlog REQUIRED)
 find_package(Vulkan REQUIRED)
 find_package(glfw REQUIRED)
+find_package(glslang REQUIRED)
+
+
+
 
 add_library(VulkanMemoryAllocator
     quix/quix_vma.cpp
@@ -39,6 +67,13 @@ target_link_libraries(${PROJECT_NAME}
     Vulkan::Vulkan
     glfw
     VulkanMemoryAllocator
+    glslang
+    glslang-default-resource-limits
+    OGLCompiler
+    OSDependent
+    HLSL
+    SPIRV
+    SPIRV-Tools-opt
 )
 
 target_include_directories(${PROJECT_NAME} 
@@ -70,3 +105,5 @@ add_custom_command(TARGET quix_example POST_BUILD
         ${CMAKE_BINARY_DIR}/compile_commands.json
         ${CMAKE_SOURCE_DIR}/build/compile_commands.json
 )
+
+
