added in sychronization and working command buffer management, finally got the hello triangle program on the screen again, in about 90 lines of code!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(_DEBUG)
 endif()
 
+message("IPO enabled? ${CMAKE_INTERPROCEDURAL_OPTIMIZATION}")
+
 project(quix)
 
 add_library(${PROJECT_NAME} 
