added in an index buffer example, and renamed command_list to commands since the file has synchronization, command pools and command lists

--- a/quix/CMakeLists.txt
+++ b/quix/CMakeLists.txt
@@ -21,7 +21,7 @@ add_library(${PROJECT_NAME}
     quix_pipeline.cpp
     quix_descriptor.cpp
     quix_render_target.cpp
-    quix_command_list.cpp
+    quix_commands.cpp
     quix_resource.cpp
 )
 
